forgotten changes